--- a/style.css
+++ b/style.css
@@ -17,7 +17,16 @@ main {
     margin: auto;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+}
+ button img {
+    height: 25px;
+ }
+
 h3 {
+    margin: auto;
     font-size: 20px;
 }
 
@@ -25,15 +34,25 @@ h3 {
     background-color: #574964 ;
     height: 80%;
     border-radius: 20px;
-    color: white;
+    color: #FFF5E4;
     padding: 20px 30px;
+    position: relative;
 }
 
-button {
+#new-quote-btn {
     border: none;
     border-radius: 4px;
     height: 30px;
     width: 50%;
     font-weight: bold;
     margin-bottom: 20px;
+    position: absolute;
+    bottom: 20px;
+    right: 25%;
+}
+
+#copy-btn {
+    border: none;
+    background-color: transparent;
+
 }
